# c4regen

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main-libclang.cpp  main.cpp
src/c4/: fs.cpp  fs.hpp
src/c4/ast/: ast.cpp  ast.hpp
src/c4/regen/: class.cpp  class.hpp  entity.cpp  entity.hpp  enum.cpp  enum.hpp  exec.hpp  extractor.cpp  extractor.hpp  function.cpp  function.hpp  generator.cpp  generator.hpp  regen.cpp  regen.hpp  source_file.cpp  source_file.hpp  writer.cpp  writer.hpp
test/: CMakeLists.txt  basic.cpp
